--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -73,7 +73,8 @@ iframe {
 	text-align: center;
 }
 #chart_container {
-	margin: -40px auto;
+	/*margin: -40px auto;*/
+	margin: -40px 0 40px 520px;
 	border: 10px solid #bbc1cc;
 	overflow: hidden;
 	vertical-align: top;
@@ -124,7 +125,7 @@ iframe {
 }
 #second_row{
 	display: block;
-	margin: -100 auto;
+	margin: 100 auto;
 	width: 1920px;
 	height: 600px;
 	text-align: center;
