--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -73,8 +73,8 @@ iframe {
 	text-align: center;
 }
 #chart_container {
-	/*margin: -40px auto;*/
-	margin: -40px 0 40px 520px;
+	margin: -40px auto;
+	/*margin: -40px 0 40px 520px;*/
 	border: 10px solid #bbc1cc;
 	overflow: hidden;
 	vertical-align: top;
@@ -106,7 +106,6 @@ iframe {
 	/*position: fixed;*/
 	/*width: 100%;*/
 	/*object-fit: cover;*/
-
 }
 #solentlogo {
 	position: fixed;
