--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -124,7 +124,11 @@ iframe {
 }
 #second_row{
 	display: block;
-	margin: 100 auto;
+	/*margin: 100 auto;*/
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 100px;
+
 	width: 1920px;
 	height: 600px;
 	text-align: center;
