--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -62,7 +62,7 @@ iframe {
 	/*border: 3px solid #804600;*/
 }
 #chart_text {
-	margin: -60px auto;
+	margin: -30px auto;
 	width: 350px;
 	/*margin-top -50px;*/
 	text-align: center;
@@ -167,6 +167,17 @@ iframe {
 	}
 	.key_svg {
 		transform: translate(10px, 10px)
+	}
+	.xlabel {
+		font-size: 110%;
+	}
+	#xlabelLHS {
+		transform: translate(10px, 10px)
+	}
+	#xlabelRHS {
+		margin-top: auto;
+		margin-right: 100px;
+	width: 150px;
 	}
 		</style>
 	</head>
