final changes made

--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -29,7 +29,7 @@
 	height: 40px;
 	opacity: .25;
 	position: fixed;
-	top: 50px;
+	top: 59px;
 	left: 410px;
 	float: left;
 }
@@ -62,7 +62,7 @@ iframe {
 	/*border: 3px solid #804600;*/
 }
 #chart_text {
-	margin: -30px auto;
+	margin: -15px auto;
 	width: 350px;
 	/*margin-top -50px;*/
 	text-align: center;
@@ -172,11 +172,21 @@ iframe {
 		font-size: 110%;
 	}
 	#xlabelLHS {
-		transform: translate(10px, 10px)
+	/*margin: -30px auto;*/
+	margin-top: -10px;
+	margin-left: 100px;
+	text-align: left;
+	font-weight: bold;
+	font-size: 120%
+	width: 150px;
 	}
 	#xlabelRHS {
-		margin-top: auto;
-		margin-right: 100px;
+	/*margin: -30px auto;*/
+	margin-top: -50px;
+	margin-right: 100px;
+	text-align: right;
+	font-weight: bold;
+	font-size: 120%
 	width: 150px;
 	}
 		</style>
