final post NCAD push

--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -196,16 +196,17 @@ iframe {
 			<div id="main_header">
 				<div class="circle red"></div>
 				<h2 id="titleText">Live
-					Air Quality Monitoring, Westquay</h2>
+					Air Quality Monitoring</h2>
 			</div>
 		</div>
 		<div id="chart_container"><!-- where the chart goes--></div>
 		<div id="second_row">
-			<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>
-			<div class="tablediv table_element" id="soton_image_container"><img src="crop_soton.png" id="soton_image"> </div>
-			<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>
+			<!--
+			<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>-->
+			<!--<div class="tablediv table_element" id="soton_image_container"><img src="crop_soton.png" id="soton_image"> </div>-->
+			<!--<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>-->
 		</div>
-		<div id="key">
+		<!--<div id="key">
 			<div class="key_element">
 				<svg class="key_svg" width="30" height="30">
 					<rect width="25" height="25" style="fill:rgb(255,125,9);stroke-width:1;stroke:rgb(0,0,0)" >
@@ -223,7 +224,7 @@ iframe {
 					Above Bar Street
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
