minor changes for outreach event

--- a/NCAD/server/public/index.html
+++ b/NCAD/server/public/index.html
@@ -131,7 +131,7 @@ iframe {
 	margin-top: 60px;
 
 	width: 1850px;
-	height: 600px;
+	height: 400px;
 	text-align: center;
 }
 .tablediv {
@@ -158,7 +158,7 @@ iframe {
 		display: inline-block;
 		/*text-align: center;*/
 		/*font-weight: bold;*/
-		font-size: 120%
+		font-size: 120%;
 	}
 	.key_text {
 		margin: -100px auto;
@@ -177,7 +177,7 @@ iframe {
 	margin-left: 100px;
 	text-align: left;
 	font-weight: bold;
-	font-size: 120%
+	font-size: 120%;
 	width: 150px;
 	}
 	#xlabelRHS {
@@ -201,8 +201,7 @@ iframe {
 		</div>
 		<div id="chart_container"><!-- where the chart goes--></div>
 		<div id="second_row">
-			<!--
-			<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>-->
+			<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/24EQf33wYW0?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>
 			<!--<div class="tablediv table_element" id="soton_image_container"><img src="crop_soton.png" id="soton_image"> </div>-->
 			<!--<div class="tablediv"><iframe class="table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe></div>-->
 		</div>
